# solana-gadgets

rust/: Cargo.toml
rust/gadgets-scfs/: Cargo.toml
rust/gadgets-scfs/src/: lib.rs
rust/sad/: Cargo.toml
rust/sad/src/: main.rs
rust/scfs-program/: Cargo.toml
rust/scfs-program/tests/: cu_test.rs
rust/scfsd/: Cargo.toml
rust/scfsd/src/: clparse.rs  main.rs  utils.rs
