[package]
name = "scfs-program"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-bpf = []

[dependencies]
solana-program = "~2.0"
tokio = { version = "1.38", features = ["full"] }


[dev-dependencies]
assert_matches = "1.5.0"
gadgets-scfs = {version="0.2.0", path="../gadgets-scfs"}
solana-client = "~2.0"
solana-program-test = "~2.0"
solana-sdk = "~2.0"
solana-logger = "~2.0"
solana-test-validator =  "~2.0"


[lib]
crate-type = ["cdylib", "lib"]
